 - Add mesh generation based on NETGEN constructive solid geometry
 - Generalise SparsityPattern and STLMatrix to support column-wise storage
 - Add interfaces to wrap PaStiX and MUMPS direct solvers
 - Add CoordinateMatrix class
 - Make STLMatrix work in parallel
 - Fix wrong link in Python quick reference
 - Remove all tr1::tuple and use boost::tuple
1.0.0 [2011-12-07]
 - Change return value of IntervalCell::facet_area() 0.0 --> 1.0.
 - Recompile all forms with FFC 1.0.0
 - Fix for CGAL 3.9 on OS X
 - Improve docstrings for Box and Rectangle
 - Check number of dofs on local patch in extrapolation
1.0-rc2 [2011-11-28]
 - Fix bug in 1D mesh refinement
 - Fix bug in handling of subdirectories for TimeSeries
 - Fix logic behind vector assignment, especially in parallel
1.0-rc1 [2011-11-21]
 - 33 bugs fixed
 - Implement traversal of bounding box trees for all codimensions
 - Edit and improve all error messages
 - Added [un]equality operator to FunctionSpace
 - Remove batch compilation of Expression (Expressions) from Python interface
 - Added get_value to MeshValueCollection
 - Added assignment operator to MeshValueCollection
1.0-beta2 [2011-10-26]
 - Change search path of parameter file to ~/.fenics/dolfin_parameters.xml
 - Add functions Parameters::has_parameter, Parameters::has_parameter_set
 - Added option to store all connectivities in a mesh for TimeSeries (false by default)
 - Added option for gzip compressed binary files for TimeSeries
 - Propagate global parameters to Krylov and LU solvers
 - Fix OpenMp assemble of scalars
 - Make OpenMP assemble over sub domains work
 - DirichletBC.get_boundary_values, FunctionSpace.collapse now return a dict in Python
 - Changed name of has_la_backend to has_linear_algebra_backend
 - Added has_foo functions which can be used instead of the HAS_FOO defines
 - Less trict check on kwargs for compiled Expression
 - Add option to not right-justify tables
 - Rename summary --> list_timings